fix: heade overflow isse

--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@
 
       .container {
         width: 90%;
+     
         max-width: 1200px;
         margin: 0 auto;
         padding: 0 15px;
@@ -217,7 +218,7 @@
 
       /* Hero Section */
       #hero {
-        height: 100vh;
+        height: 100%;
         display: flex;
         align-items: center;
         background: linear-gradient(
@@ -996,6 +997,9 @@
 
       /* Responsive Styles */
       @media (max-width: 992px) {
+        .header-container{
+          z-index: 1000000;
+        }
         .hero-text h1 {
           font-size: 2.8rem;
         }
